Remaining model tests